Try to fix gallery alignment on homepage (second attempt).

--- a/styles/index.less
+++ b/styles/index.less
@@ -400,7 +400,7 @@ h3 {
 
     .sqs-block-gallery {
         position: relative;
-        top: -60px;
+        top: -78px;
         border-radius: 15px;
         background-color: black;
         padding: 46px 16px 24px;
@@ -410,8 +410,8 @@ h3 {
         clear: none; // necessary if an element above has float, otherwise rows will no longer align
     }
 
-    .sqs-block-gallery:not(:first-child) {
-        top: -78px;
+    .sqs-block-gallery:first-child {
+        top: -60px;
     }
 
     .sqs-block:not(.sqs-block-gallery) {
